<resources>
    <string name="app_name">SAP Codelab</string>
    <string name="action_show_all">Show All</string>
    <string name="action_show_open">Show Open</string>
    <string name="memo_title">Title</string>
    <string name="new_memo">New Memo</string>
    <string name="memo_text">Text</string>
    <string name="action_save">Save</string>
    <string name="memo_title_empty_error">Please provide a title for this memo</string>
    <string name="memo_text_empty_error">Please provide a memo description</string>
    <string name="select_location">Select Location</string>
    <string name="select_location_on_map">Select Location on Map</string>
    <string name="no_location_selected">No location selected</string>
    <string name="clear_location">Clear Location</string>
    <string name="location_selected">Location: %1$.4f, %2$.4f</string>
    <string name="location_permission_required">Location permission is required to select a location for your memo</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="notification_channel_name">Memo Reminders</string>
    <string name="notification_channel_description">Notifications for location-based memo reminders</string>
</resources>
