<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sap.codelab.view.create.CreateMemo"
    tools:showIn="@layout/activity_create_memo">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/memo_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/memo_description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/memo_title_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_activity"
        android:text="@string/select_location"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintTop_toBottomOf="@id/memo_description_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_location_on_map"
        app:layout_constraintTop_toBottomOf="@id/location_label" />

    <TextView
        android:id="@+id/selected_location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_location_selected"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/select_location_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clear_location"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_location_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
